--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,11 @@
     	img{
     		height: 12em;
     		width: 1373px;
-    		
     		vertical-align: center;
+            fixed: 50%/cover;
+            margin: 0 auto;
+            width: 100%;
+            padding: 2%;
     	}
     	a{
     		font-size: 15px;
